--- a/app/package.json
+++ b/app/package.json
@@ -1,17 +1,25 @@
 {
-  "name": "app",
-  "version": "0.0.0",
+  "name": "api",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "./node_modules/.bin/supervisor ./bin/www"
   },
   "dependencies": {
-    "express": "~4.9.0",
     "body-parser": "~1.8.1",
+    "chai": "^1.9.2",
     "cookie-parser": "~1.3.3",
-    "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
-    "jade": "~1.6.0"
+    "express": "~4.9.0",
+    "jade": "~1.6.0",
+    "mocha": "^1.21.5",
+    "mongodb": "^1.4.19",
+    "mongoose": "^3.8.17",
+    "monk": "^0.9.0",
+    "morgan": "~1.3.0",
+    "serve-favicon": "^2.1.5",
+    "sinon": "^1.10.3",
+    "stackman": "^0.2.2",
+    "supervisor": "^0.6.0"
   }
 }
