--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^3.8.17",
     "monk": "^0.9.0",
     "morgan": "~1.3.0",
+    "redis": "^0.12.1",
     "serve-favicon": "^2.1.5",
     "sinon": "^1.10.3",
     "stackman": "^0.2.2",
