--- a/app/package.json
+++ b/app/package.json
@@ -17,7 +17,9 @@
     "mongoose": "^3.8.17",
     "monk": "^0.9.0",
     "morgan": "~1.3.0",
+    "msgpack": "^0.2.4",
     "redis": "^0.12.1",
+    "request": "^2.45.0",
     "serve-favicon": "^2.1.5",
     "sinon": "^1.10.3",
     "stackman": "^0.2.2",
