--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "express": "~4.9.0",
     "jade": "~1.6.0",
     "mocha": "^1.21.5",
+    "moment": "^2.8.3",
     "mongodb": "^1.4.19",
     "mongoose": "^3.8.17",
     "monk": "^0.9.0",
