--- a/app/package.json
+++ b/app/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "./node_modules/.bin/supervisor ./bin/www",
-		"test": "./node_modules/.bin/mocha -u tdd"
+    "start": "npm run product",
+    "product": "sudo pm2 start bin/www -f -x -i max --name push",
+    "dev": "./node_modules/.bin/supervisor ./bin/www",
+    "test": "./node_modules/.bin/mocha -u tdd"
   },
   "dependencies": {
     "body-parser": "~1.8.1",
@@ -20,6 +22,7 @@
     "monk": "^0.9.0",
     "morgan": "~1.3.0",
     "msgpack": "^0.2.4",
+    "pm2": "^0.12.1",
     "redis": "^0.12.1",
     "request": "^2.45.0",
     "serve-favicon": "^2.1.5",
