--- a/app/package.json
+++ b/app/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
+    "dateformat": "^1.0.8",
     "debug": "~2.0.0",
     "express": "~4.9.0",
     "jade": "~1.6.0",
+    "later": "^1.1.6",
     "moment": "^2.8.3",
     "mongodb": "^1.4.19",
     "mongoose": "^3.8.17",
@@ -28,6 +30,9 @@
   },
   "devDependencies": {
     "chai": "^1.9.2",
+    "gulp": "^3.8.10",
+    "gulp-istanbul": "^0.4.0",
+    "gulp-mocha": "^2.0.0",
     "istanbul": "^0.3.2",
     "mocha": "^1.21.5",
     "sinon": "^1.10.3",
